--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 sudo: required
 services:
   - docker
+
 before_install:
   - docker build -t abdulgaffersiam/react-test -f ./client/Dockerfile.dev ./client
+
 script:
-  - docker run abdulgaffersiam/react-test npm test -- --coverage
+  - docker run -e CI=true abdulgaffersiam/react-test npm test
+
 after_success:
   - docker build -t abdulgaffersiam/multy-client ./client
   - docker build -t abdulgaffersiam/multy-nginx ./nginx
